css/main.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
}

html {
    font-size: 16px;
    color: rgba(0, 0, 0, 0.75);
    overflow-x: hidden;
    scroll-behavior: smooth;
}

.container {
    margin: 0 auto;
    width: calc(100vw - 20px);
    display: flex;
    flex-direction: column;
    justify-content: center;
}

/* ? Header */

.header {
    position: fixed;
    top: 0px;
    width: calc(100vw - 30px);
    background: #FFFFFF;
    box-shadow: 0 5px 50px rgba(0, 0, 0, 0.25);
    border-radius: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 0 7.5px 0;
    z-index: 51;
    user-select: none;
}

.logo {
    font-family: "Englebert", sans-serif;
    font-size: 2rem;
    font-weight: 900;
    line-height: 150%;
    transition: .5s all ease;
    margin-left: 30px;
    display: flex;
    align-items:center;
}

.fa-atlas {
    font-weight: 900;
    font-size: 2rem;
    line-height: 150%;
    align-self:center;
}

/* ? Klasyczna Nawigacja */

.navigation-list,
.navigation-subpage-list {
    list-style-type: none;
    text-transform: uppercase;
    display: flex;
    align-items: center;
    margin-right: 10px;
    z-index: 50;
}

.navigation-item,
.navigation-subpage-item {
    font-family:"Montserrat","sans-serif";
    font-weight:600;
    padding: 12.5px 17.5px;
    user-select: none;
    transition: .5s all ease;
}

.navigation-subpage-item {
    padding: 0;
}

.navigation-item:hover,
.navigation-subpage-item:hover {
    text-shadow: 0 5px 2.5px rgba(0, 0, 0, 1);
    cursor: pointer;
}

/* ? Hamburger Menu */

.hamburger {
    position: fixed;
    right: 30px;
    top: 17.5px;
    height: 20px;
    width: 40px;
    background-color: transparent;
    border: none;
    outline: none;
    transition: .4s;
    visibility: hidden;
    cursor: pointer;
    z-index: 52;
}

.line {
    position: absolute;
    left: 0;
    width: 100%;
    height: 4px;
    background-color: rgba(0, 0, 0, 0.75);
    border-radius: 15px;
    transition: transform 0.4s;
}

.line:nth-child(1) {
    top: 0;
}

.line:nth-child(2) {
    top: calc(50% - 2px);
}

.line:nth-child(3) {
    bottom: 0;
}

.line.active:nth-child(1) {
    top: calc(50% - 2px);
    transform: rotate(45deg);
}

.line.active:nth-child(2) {
    opacity: 0;
    transition: opacity .2s;
}

.line.active:nth-child(3) {
    top: calc(50% - 2px);
    transform: rotate(-45deg);
}

/* ? Footer */

.footer {
    box-shadow: 0 5px 50px rgba(0, 0, 0, 0.25);
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: space-around;
    padding: 10px 0 7.5px 0;
    margin: 5px;
    font-size: 1.25rem;
    font-family: "Englebert", sans-serif;
    font-weight: 900;
    line-height: 175%;
}

.fab {
    user-select: none;
    transition: .5s all ease;
    padding: 10px;
    border-radius: 50%;
}

.fab:hover {
    color: #FFFFFF;
    cursor: pointer;
}

.fa-facebook:hover {
    background-color: #3B5998;
}

.fa-youtube:hover {
    background-color: #C4302B;
}

.fa-snapchat-ghost:hover {
    background-color: #FFFC00;
}

.fa-linkedin-in:hover {
    background-color: #0E76A8;
}

/* ? Media Queries */

@media(max-width:1100px) {
    html {
        font-size: 14px;
    }

    #btn-hand-down {
        width: 100px;
        height: 100px;
    }

    .description {
        width: 400px;
    }

    .description-button {
        margin-top: 15px;
    }

    .form {
        width: 70vw;
    }
}

@media(max-width:950px) {
    html {
        font-size: 13px;
    }

    .description {
        width: 320px;
    }

    #btn-hand-down {
        margin-left: 20px;
    }

    .illustration {
        width: 250px;
    }

    .form {
        width: 75vw;
        padding-right: 0;
    }

    .form-introduction {
        font-size: 2rem;
    }
}

@media(max-width:850px) {
    html {
        font-size: 12px;
    }

    .description {
        width: 280px;
        font-size: 1.2rem;
    }

    #btn-hand-down {
        width: 80px;
        height: 80px;
    }

    .fa-hand-point-down {
        font-size: 2.7rem;
    }

    .form {
        width: 80vw;
    }

}

@media(max-width:750px) {
    .header {
        width: calc(100vw - 20px);
    }

    .landing-page {
        flex-direction: column;
        align-items: center;
        margin-top: 80px;
    }

    .rectangle {
        height: 55%;
    }

    .headline {
        text-align: center;
    }

    .description-button {
        flex-direction: column;
        align-items: center;
    }

    .description {
        padding: 0 40px;
        width: auto;
        text-align: center;
    }

    #btn-hand-down {
        margin-left: 0;
        margin-top: 20px;
    }

    .illustration {
        margin-top: 30px;
    }

    .category {
        padding: 15px;
    }

    .form {
        padding-left: 0;
        width: 65vw;
    }

    .illustration-question {
        display: none;
    }
}

@media(max-width: 730px) {
    #svg-element {
        display: none;
    }

    .category-section {
        height: auto;
    }

    .category {
        margin-top: 20px;
    }

    .categories-container {
        top: 0;
        background-color: #00C5D4;
        margin: 25px 0;
        padding: 30px 10px 70px 10px;
        border-radius: 30px;
    }
}

@media(max-width:680px) {
    .header {
        width: calc(100vw - 20px);
    }

    .navigation-list {
        width: calc(100vw - 20px);
    }

    .hamburger {
        visibility: visible;
    }

    .navigation-list {
        position: fixed;
        top: 60px;
        left: 10px;
        flex-direction: column;
        transform: translateX(100vw);
        background-color: white;
        transition: transform .8s;
        border-radius: 5px;
    }

    .navigation-item {
        position: relative;
        width: 100%;
        text-align: center;
        padding: 20px 0;
        background-color: white;
        border-radius: 5px;
        border: 3px solid #014166;
        outline: none;
    }

    .navigation-item::after {
        content: "";
        position: absolute;
        top: -3px;
        left: 80%;
        width: calc(20% + 3px);
        height: calc(100% + 6px);
        background-color: #014166;
        clip-path: circle(0 at 80% 20%);
        transition: clip-path .7s;

    }

    .navigation-item:not(:nth-child(1)) {
        margin-top: 5px;
    }


    .navigation-item:hover::after {
        clip-path: circle(65% at 80% 20%);
    }

    .navigation-item:hover {
        text-shadow: none;
    }
    .logo{
        line-height:100%;
    }
    
    .fa-atlas{
        line-height:100%;
    }
    
    .form-button{
        padding-top:15px;
    }
    .footer-text{
        padding-top:8px;
    }
}

@media(max-width:600px) {
    .form {
        width: 75vw;
    }

    .footer-text {
        width: 180px;
        line-height: 1.5;
    }

    .social-media-icons {
        width: 150px;
        line-height: 2;
    }
}

@media(max-width:460px) {
    html {
        font-size: 11px;
    }

    .logo {
        margin-left: 15px;
        font-size: 1.5rem;
    }

    .hamburger {
        height: 20px;
        top: 12px;
        width: 30px;
        right: 30px;
    }

    .navigation-list {
        top: 48px;
    }

    .form {
        width: 85vw;
        padding: 20px 10px;
    }

    .social-media-icons {
        width: 120px;
    }

    .footer-text {
        width: 150px;
    }
}

@media(max-width:400px) {
    .headline {
        font-size: 2.2rem;
    }

    .category {
        padding: 20px 10px;
    }

    .form {
        width: 90vw;
    }
}

@media(max-width: 385px) {
    .label-input {
        flex-direction: column;
    }

    .form-inputs {
        margin-top: 10px;
    }

    .label-textarea {
        text-align: center;
    }
}

@media(max-width:350px) {
    .logo {
        margin-left: 10px;
        font-size: 1.3rem;
    }

    .headline {
        font-size: 1.9rem;
    }

    .description {
        font-size: 1.1rem;
    }

    #btn-hand-down {
        width: 70px;
        height: 70px;
    }

    .fa-hand-point-down {
        font-size: 2.5rem;
    }

    .illustration {
        width: 220px;
    }

    .footer {
        font-size: 1rem;
    }

    .footer-text {
        width: 120px;
    }
}

@media(max-width:320px) {
    html {
        font-size: 10px;
    }

    .logo {
        font-size: 1.2rem;
    }
}

/* ? Class used in JS. Its purpose is to translate the navbar. */

.navigation-list-down {
    transform: translateX(0);
}

/* ?  Styling links */

.link {
    text-decoration: none;
    color: inherit;
}

